--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
 
-  <header>
+  <header class="headerr">
 <nav>
-  <h3 class="nav-title">Ma<span class="color-orange">r</span>y</h3>
+  <h3 class="nav-title">So<span class="color-orange">m</span>u</h3>
 
 <ul>
   <li><a href="">Portfolio</a></li>
@@ -24,6 +24,16 @@
   <li><button class="hiree">Hire Me</button></li>
 </ul>
 </nav>
+<div class="banner">
+  <div class="banner-content">
+    <h3 class="banner-greeting">Hi, I am</h3>
+<h1 class="banner-title">Somu Mandol</h1>
+<p>Web development is the process of building, programming, and maintaining websites and web applications.</p>
+<button class="downloadd">Download CV</button>
+<button class="contactt">Contact</button>
+  </div>
+  <img class="profile-pic" src="images/hardy.png" alt="">
+</div>
   </header>
   
 <main>
