--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="banner-content">
     <h3 class="banner-greeting">Hi, I am</h3>
 <h1 class="banner-title">Somu Mandol</h1>
-<p>Web development is the process of building, programming, and maintaining websites and web applications.</p>
+<p class="banner-des">Web development is the process of building, programming, and maintaining websites and web applications.</p>
 <button class="downloadd">Download CV</button>
 <button class="contactt">Contact</button>
   </div>
