added about section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,27 @@
 <section class="about"> <h3 class="section-title">About Me</h3>
 
   <p class="section-des">Web development is the work involved in developing a website for the Internet (World Wide Web) or an intranet (a private network).[1] Web development can range from developing a simple single static page of plain text to complex web applications, electronic businesses, and social network services. A more comprehensive list of tasks to which Web development commonly refers, may include Web engineering, Web design, Web content development, client liaison, client-side/server-side scripting, Web server and network security configuration, and e-commerce development.</p>
+<div class="about-info-container">
+  <!-- .about-info*4>h4.info-title+p.info-des -->
+  <div class="about-info">
+    <h4 class="info-title">Name:</h4>
+    <p class="info-des">Somu Mandol</p>
+  </div>
+  <div class="about-info">
+    <h4 class="info-title">Email:</h4>
+    <p class="info-des">info@gmail.com</p>
+  </div>
+  <div class="about-info">
+    <h4 class="info-title">Date of Birth:</h4>
+    <p class="info-des">20 November 1998</p>
+  </div>
+  <div class="about-info">
+    <h4 class="info-title">From:</h4>
+    <p class="info-des">Madaripur, Dhaka</p>
+  </div>
 
+
+</div>
 </section>
 
 </main>
