--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
   
 <main>
 
-<section class="about"> <h3 class="section-title">About Me</h3>
+<section class="about"> 
+  <h3 class="section-title">About Me</h3>
 
   <p class="section-des">Web development is the work involved in developing a website for the Internet (World Wide Web) or an intranet (a private network).[1] Web development can range from developing a simple single static page of plain text to complex web applications, electronic businesses, and social network services. A more comprehensive list of tasks to which Web development commonly refers, may include Web engineering, Web design, Web content development, client liaison, client-side/server-side scripting, Web server and network security configuration, and e-commerce development.</p>
 <div class="about-info-container">
@@ -62,6 +63,129 @@
 
 
 </div>
+</section>
+
+<!-- What I do section start-->
+<section>
+  <h3 class="section-title">What I do</h3>
+  <p id="what-i-do-des"> I have more than 10 years experience building software for clients all over the world. Below is a quick 
+    overview of my main technical skill sets and technologies i use. Want to find out more about my experience? 
+    Check out my online resume and project portfolio</p>
+
+    <div class="skill-container">
+<div class="skill">
+  <img src="images/icons/js.png" alt="">
+  <h3 class="skill-title">Vanilla JavaScript</h3>
+  <p class="skill-des">List skill/technologies 
+    here. You can change the 
+    icon above to any of the 
+    1500+ FontAwesome 5 
+    free icons available. 
+    Aenean commodo ligula 
+    eget dolor</p>
+</div>
+<div class="skill">
+  <img src="images/icons/react.png" alt="">
+  <h3 class="skill-title"> React</h3>
+  <p class="skill-des">List skill/technologies 
+    here. You can change the 
+    icon above to any of the 
+    1500+ FontAwesome 5 
+    free icons available. 
+    Aenean commodo ligula 
+    eget dolor.</p>
+</div>
+<div class="skill">
+  <img src="images/icons/nodejs.png" alt="">
+  <h3 class="skill-title">Node.js</h3>
+  <p class="skill-des"> List skill/technologies 
+    here. You can change the 
+    icon above to any of the 
+    1500+ FontAwesome 5 
+    free icons available. 
+    Aenean commodo ligula 
+    eget dolor.</p>
+</div>
+<div class="skill">
+  <img src="images/icons/mongo.png" alt="">
+  <h3 class="skill-title">MongoDB</h3>
+  <p class="skill-des"> List skill/technologies 
+    here. You can change the 
+    icon above to any of the 
+    1500+ FontAwesome 5 
+    free icons available. 
+    Aenean commodo ligula 
+    eget dolor.</p>
+</div>
+
+    </div>
+</section>
+
+<!-- Resume section -->
+<section>
+  <h3 class="section-title"> A summary of My Resume
+  </h3>
+    
+  <div class="resume-container">
+
+<div class="resume-column">
+  <h3 class="resume-column-title">My Education</h3>
+
+  <div class="resume-item">
+  <h2 class="resume-item-title">Master in Computer Engineering</h2>
+  <h3 class="resume-item-insti">Harvard University / 2015 - 2017</h3>
+  <p class="resume-item-des">List skill/technologies here. You can change the icon above 
+    to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+    commodo ligula eget dolor</p>
+</div>
+<hr>
+<div class="resume-item">
+  <h2 class="resume-item-title">Master in Computer Engineering</h2>
+  <h3 class="resume-item-insti">Harvard University / 2015 - 2017</h3>
+  <p class="resume-item-des">List skill/technologies here. You can change the icon above 
+    to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+    commodo ligula eget dolor</p>
+</div>
+<hr>
+<div class="resume-item">
+  <h2 class="resume-item-title">Master in Computer Engineering</h2>
+  <h3 class="resume-item-insti">Harvard University / 2015 - 2017</h3>
+  <p class="resume-item-des">List skill/technologies here. You can change the icon above 
+    to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+    commodo ligula eget dolor</p>
+</div>
+
+
+</div>
+<div class="resume-column">
+  <h3 class="resume-column-title">My Experience</h3>
+  <div class="resume-item">
+    <h2 class="resume-item-title">Master in Computer Engineering</h2>
+    <h3 class="resume-item-insti">Harvard University / 2015 - 2017</h3>
+    <p class="resume-item-des">List skill/technologies here. You can change the icon above 
+      to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+      commodo ligula eget dolor</p>
+  </div>
+  <hr>
+  <div class="resume-item">
+    <h2 class="resume-item-title">Master in Computer Engineering</h2>
+    <h3 class="resume-item-insti">Harvard University / 2015 - 2017</h3>
+    <p class="resume-item-des">List skill/technologies here. You can change the icon above 
+      to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+      commodo ligula eget dolor</p>
+  </div>
+  <hr>
+  <div class="resume-item">
+    <h2 class="resume-item-title">Master in Computer Engineering</h2>
+    <h3 class="resume-item-insti">Harvard University / 2015 - 2017</h3>
+    <p class="resume-item-des">List skill/technologies here. You can change the icon above 
+      to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+      commodo ligula eget dolor</p>
+  </div>
+</div>
+
+    </div>
+   
 </section>
 
 </main>
