finished the resume section

--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
 </div>
 
     </div>
-   
+   <div class="dwn">
+    <button class="dwn-cv">Download CV</button>
+   </div>
 </section>
 
 </main>
