--- a/index.html
+++ b/index.html
@@ -203,8 +203,16 @@
       <a href=""><img src="images/icons/twitter.png" alt=""></a>
     </div>
 </div>
-<div class="footer-coulmn">
+<div class="footer-column">
   <h3 class="section-title"> Let’s Message me</h3>
+  
+  <form class="contact" action="">
+    <input type="text" placeholder="Your name">
+    <input type="email" placeholder="Your email">
+    <textarea  name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+   <input class="sub-btn" type="submit" value="submit">
+  
+  </form>
 </div>
 </footer>
 
