added font awesome icons

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/portfolio.css">
-  
+  <script src="https://kit.fontawesome.com/f056a62cc9.js" crossorigin="anonymous"></script>
 </head>
 
 
@@ -29,8 +29,8 @@
     <h3 class="banner-greeting">Hi, I am</h3>
 <h1 class="banner-title">Somu Mandol</h1>
 <p class="banner-des">Web development is the process of building, programming, and maintaining websites and web applications.</p>
-<button class="downloadd">Download CV</button>
-<button class="contactt">Contact</button>
+<button class="downloadd"> <i class="fa-solid fa-download"></i> Download CV</button>
+<button class="contactt"> <i class="fa-solid fa-phone"></i> Contact</button>
   </div>
   <img class="profile-pic" src="images/hardy.png" alt="">
 </div>
@@ -186,7 +186,7 @@
 
     </div>
    <div class="dwn">
-    <button class="dwn-cv">Download CV</button>
+    <button class="dwn-cv"> <i class="fa-solid fa-download"></i> Download CV</button>
    </div>
 </section>
 
